force-app/main/default/objects/CaseStatusChanged__e/CaseStatusChanged__e.object-meta.xml
<CustomObject>
    <label>Case Status Changed</label>
    <pluralLabel>Case Status Changed</pluralLabel>
</CustomObject>