force-app/main/default/objects/CaseStatusChanged__e/fields/Assigned_Technician_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician_Id__c</fullName>
    <label>Assigned Technician ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>