force-app/main/default/objects/CaseStatusChanged__e/fields/Assigned_Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician_Name__c</fullName>
    <label>Assigned Technician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>