force-app/main/default/objects/CaseStatusChanged__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>