force-app/main/default/objects/CaseStatusChanged__e/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>16</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>