force-app/main/default/objects/CaseStatusChanged__e/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>DateTime</type>
</CustomField>